minor changes localization

--- a/AiryCat.UtilitiesForUnity/Resources/Localization/Eng.json
+++ b/AiryCat.UtilitiesForUnity/Resources/Localization/Eng.json
@@ -1,12 +1,12 @@
 ﻿{
-	"items": [
+	"Items": [
 		{
-			"key": "hi",
-			"value": "Hi"
+			"Key": "hi",
+			"Value": "Hi"
 		},
 		{
-			"key": "bye",
-			"value": "Bye"
+			"Key": "bye",
+			"Value": "Bye"
 		}
 	]
 }
