--- a/AiryCat.UtilitiesForUnity/Resources/Localization/Rus.json
+++ b/AiryCat.UtilitiesForUnity/Resources/Localization/Rus.json
@@ -1,12 +1,12 @@
 ﻿{
-	"items": [
+	"Items": [
 		{
-			"key": "hi",
-			"value": "Привет"
+			"Key": "hi",
+			"Value": "Привет"
 		},
 		{
-			"key": "bye",
-			"value": "Пока"
+			"Key": "bye",
+			"Value": "Пока"
 		}
 	]
 }
